--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.webpage {
+  background-color: antiquewhite;
+}
+
+body {
+  background-color: antiquewhite;
+}
